# dpc

./: Cargo.toml
.github/workflows/: ci.yml
src/: lib.rs
src/constraints/: delegable_dpc.rs  mod.rs  plain_dpc.rs
src/dpc/: mod.rs
src/dpc/delegable_dpc/: address.rs  core_checks_circuit.rs  mod.rs  parameters.rs  predicate.rs  predicate_circuit.rs  proof_check_circuit.rs  record.rs  test.rs  transaction.rs
src/dpc/plain_dpc/: address.rs  core_checks_circuit.rs  instantiated.rs  mod.rs  parameters.rs  predicate.rs  predicate_circuit.rs  proof_check_circuit.rs  record.rs  test.rs  transaction.rs
src/ledger/: ideal_ledger.rs  mod.rs
src/predicates/plain_dpc/: predicate_circuit.rs
tests/: plain_dpc.rs
