[package]
name = "dpc"
version = "0.1.1-alpha.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A library for decentralized private computation"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/zexe/"
keywords = ["zero knowledge", "cryptography", "smart contracts", "cryptocurrency"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { git = "https://github.com/scipr-lab/zexe", features = [ "bls12_377", "ed_on_bls12_377", "ed_on_cp6_782", "cp6_782" ] }
r1cs-core = { git = "https://github.com/scipr-lab/zexe" }
r1cs-std = { git = "https://github.com/scipr-lab/zexe", features = [ "bls12_377", "ed_on_bls12_377", "ed_on_cp6_782" ] }
crypto-primitives = { git = "https://github.com/scipr-lab/zexe", features = [ "groth16", "r1cs" ] }
groth16 = { git = "https://github.com/scipr-lab/zexe" }
bench-utils = { git = "https://github.com/scipr-lab/zexe" }

rand = { version = "0.7" }
derivative = "2"

[dev-dependencies]
rand_xorshift = { version = "0.2" }
tracing-subscriber = { version = "0.2" }
tracing = { version = "0.1", default-features = false }

###############################################################################

################################## Features ###################################

[features]
print-trace = [ "bench-utils/print-trace" ]

###############################################################################
