[package]
name = "ark-dpc"
version = "0.3.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A library for decentralized private computation"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/dpc"
documentation = "https://docs.rs/ark-dpc/"
keywords = ["zero knowledge", "cryptography", "smart contracts", "cryptocurrency"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
ark-std = { version = "0.3", default-features = false }
ark-ff = { version = "0.3", default-features = false }
ark-ec = { version = "0.3", default-features = false }
ark-bls12-377 = { version = "0.3", default-features = false, features = ["curve", "r1cs"] }
ark-ed-on-bls12-377 = { version = "0.3", default-features = false, features = ["r1cs"] }
ark-bw6-761 = { version = "0.3", default-features = false }
ark-ed-on-bw6-761 = { version = "0.3", default-features = false, features = ["r1cs"] }
ark-relations = { version = "0.3", default-features = false }
ark-r1cs-std = { version = "0.3", default-features = false }
ark-crypto-primitives = { version = "0.3", default-features = false, features = ["r1cs"] }
ark-groth16 = { version = "0.3", default-features = false, features = [ "r1cs" ] }

derivative = "2"

[dev-dependencies]
tracing-subscriber = { version = "0.2" }
tracing = { version = "0.1", default-features = false }

###############################################################################

################################## Features ###################################

[features]
print-trace = [ "ark-std/print-trace" ]

###############################################################################
